Archive/5e169f5e6076c8c4d4d33c60e6b38fb4-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int some_background_worker(std::vector<std::basic_string<char> >)’:
main.cpp:12:9: error: ‘ref_data’ was not declared in this scope
     if (ref_data.empty()) return 42;
         ^
